--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -157,7 +157,7 @@
                                 </a>
                                 <div>
                                   <h3 class="portfolio-item-heading">Raise Effect API</h3>
-                                  <p class="portfolio-item-text">
+                                  <p class="portfolio-item-text center-block">
                                     The Python REST API that powers <a target="_blank" href="http://raiseeffect.org/">raiseeffect.org</a>,
                                     a <a href="http://www.hackoregon.org/">Hack Oregon</a> open-source project.
                                   </p>
@@ -175,7 +175,7 @@
                                 </a>
                                 <div>
                                   <h3 class="portfolio-item-heading">Intramusical</h3>
-                                  <p>A Python/Django application that generates interval identification exercises for musicians using the Web Audio API.</p>
+                                  <p class="portfolio-item-text center-block">A Python/Django application that generates interval identification exercises for musicians using the Web Audio API.</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source Code</button>
                                     <button class="btn btn-default" type="button" name="button">About</button>
@@ -189,7 +189,10 @@
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-3.jpg' %}">
                                 </a>
                                 <div>
-                                  <p class="caption">Can I Eat This?</p>
+                                  <h3 class="portfolio-item-heading">Can I Eat This?</h3>
+                                  <p class="portfolio-item-text center-block">
+                                    A Django + Django REST Framework + React application for tracking foods allowed under user-defined dietary restrictions.
+                                  </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source Code</button>
                                     <button class="btn btn-default" type="button" name="button">About</button>
@@ -203,7 +206,10 @@
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-4.jpg' %}">
                                 </a>
                                 <div>
-                                  <p class="caption">JavaPic</p>
+                                  <h3 class="portfolio-item-heading">Javapic</h3>
+                                  <p class="portfolio-item-text center-block">
+                                    An interactive photo gallery with custom cross-browser form validation. All HTML and CSS modifications are done with Javascript.
+                                  </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source</button>
                                     <button class="btn btn-default" type="button" name="button">About</button>
