change 'About' buttons to 'Details'

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -163,7 +163,7 @@
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <a href="https://github.com/Jobs-Economy/backend" class="btn btn-default">View Source</a>
-                                    <a href="" class="btn btn-default">About</a>
+                                    <a href="" class="btn btn-default">Details</a>
                                   </div>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                                   <p class="portfolio-item-text center-block">A Python/Django application that generates interval identification exercises for musicians using the Web Audio API.</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source Code</button>
-                                    <button class="btn btn-default" type="button" name="button">About</button>
+                                    <button class="btn btn-default" type="button" name="button">Details</button>
                                   </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source Code</button>
-                                    <button class="btn btn-default" type="button" name="button">About</button>
+                                    <button class="btn btn-default" type="button" name="button">Details</button>
                                   </div>
                                 </div>
                             </div>
@@ -211,8 +211,8 @@
                                     An interactive photo gallery with custom cross-browser form validation. All HTML and CSS modifications are done with Javascript.
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
-                                    <button class="btn btn-default" type="button" name="button">View Source</button>
-                                    <button class="btn btn-default" type="button" name="button">About</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source Code</button>
+                                    <button class="btn btn-default" type="button" name="button">Details</button>
                                   </div>
                                 </div>
                             </div>
