change CIET thumbnail image to dragonfruit pic

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -186,7 +186,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item thumbnail">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-3.jpg' %}">
+                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/images/dragonfruit-cropped.jpg' %}">
                                 </a>
                                 <div>
                                   <h3 class="portfolio-item-heading">Can I Eat This?</h3>
