Tweak thumbnail description text

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -158,7 +158,7 @@
                                 <div>
                                   <h3 class="portfolio-item-heading">Raise Effect API</h3>
                                   <p class="portfolio-item-text center-block">
-                                    The Python REST API that powers <a target="_blank" href="http://raiseeffect.org/">raiseeffect.org</a>,
+                                    The Python/Flask REST API that powers <a target="_blank" href="http://raiseeffect.org/">raiseeffect.org</a>,
                                     a <a href="http://www.hackoregon.org/">Hack Oregon</a> open-source project.
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
@@ -175,7 +175,7 @@
                                 </a>
                                 <div>
                                   <h3 class="portfolio-item-heading">Intramusical</h3>
-                                  <p class="portfolio-item-text center-block">A Python/Django application that generates interval identification exercises for musicians using the Web Audio API.</p>
+                                  <p class="portfolio-item-text center-block">A Python/Django application that generates ear-training exercises using the Web Audio API.</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source Code</button>
                                     <button class="btn btn-default" type="button" name="button">Details</button>
