--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -203,7 +203,7 @@
                         <div class="col-md-6">
                             <div class="portfolio-item thumbnail">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-4.jpg' %}">
+                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/images/javapic2.jpg' %}">
                                 </a>
                                 <div>
                                   <h3 class="portfolio-item-heading">Javapic</h3>
