--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -183,6 +183,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="clearfix visible-lg visible-md"></div>
                         <div class="col-md-6">
                             <div class="portfolio-item thumbnail">
                                 <a href="#">
@@ -217,6 +218,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="clearfix visible-lg visible-md"></div>
                     </div>
                     <!-- /.row (nested) -->
                     <a href="#" class="btn btn-dark">View More Items</a>
