--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -134,14 +134,6 @@
         </div>
         <!-- /.container -->
     </section>
-
-    <!-- Callout -->
-    <aside class="callout">
-        <div class="text-vertical-center">
-            <p>Not sure if I want to keep this or not.</p>
-        </div>
-    </aside>
-
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
@@ -221,7 +213,7 @@
                         <div class="clearfix visible-lg visible-md"></div>
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
+                    <a href="#" class="btn btn-dark">See All Projects</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -230,7 +222,6 @@
         <!-- /.container -->
     </section>
 
-    <!-- Call to Action -->
     <aside class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
@@ -240,7 +231,7 @@
                   <p class="lead">I write code every day, both for myself and for open-source projects.</p>
                 </div>
 
-                <!-- Prepare a container for your calendar. -->
+                <!-- container for the calendar. -->
                 <div class="calendar hidden-xs hidden-sm">
                     <!-- Loading stuff -->
                     Loading the data just for you.
@@ -253,13 +244,12 @@
     </aside>
 
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Evan Palmer</strong></h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:evan@evanpalmer.net">evan@evanpalmer.net</a>
                         </li>
                     </ul>
