tweak wording on CIET description

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -184,7 +184,7 @@
                                 <div>
                                   <h3 class="portfolio-item-heading">Can I Eat This?</h3>
                                   <p class="portfolio-item-text center-block">
-                                    A Django + Django REST Framework + React application for tracking foods allowed under user-defined dietary restrictions.
+                                    A single-page Django + Django REST Framework + React application for tracking foods allowed under custom dietary restrictions.
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source Code</button>
