--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -1,40 +1,11 @@
+{% extends "homepage/base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
+{% block title %}
+{{ block.super }} - Home
+{% endblock title %}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Evan Palmer">
-
-    <title>Evan Palmer | Web Developer</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="{% static 'homepage/sb-portfolio-1.0.4/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="{% static 'homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css' %}" rel="stylesheet">
-
-    <!-- Calendar CSS -->
-    <link href="{% static 'homepage/github-calendar.css' %}" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="{% static 'homepage/sb-portfolio-1.0.4/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
+{% block content %}
     <!-- Navigation -->
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
@@ -312,12 +283,11 @@
         });
     });
     </script>
-    <script
+    {# <script
     src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js">
-    </script>
+    </script> #}
+    <script src="{% static 'homepage/js/github-calendar.min.js' %}" charset="utf-8"></script>
     <script>
         GitHubCalendar(".calendar", "palmerev");
     </script>
-</body>
-
-</html>
+{% endblock content %}
