add github icon to contact info

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -235,6 +235,9 @@
                         <li>
                             <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
+                        <li>
+                            <a href="#"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                        </li>
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Evan Palmer 2016</p>
