--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -227,16 +227,19 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/__evanpalmer__" target="_blank">
+                              <i class="fa fa-twitter fa-fw fa-3x"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://www.linkedin.com/in/evanpalmer1" target="_blank">
+                              <i class="fa fa-linkedin fa-fw fa-3x"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/palmerev" target="_blank">
+                              <i class="fa fa-github fa-fw fa-3x"></i>
+                            </a>
                         </li>
                     </ul>
                     <hr class="small">
