add link to main.css in base.html, add bio section to index.html

--- a/portfolio/homepage/templates/homepage/base.html
+++ b/portfolio/homepage/templates/homepage/base.html
@@ -19,6 +19,7 @@
 
     <!-- Custom CSS -->
     <link href="{% static 'homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css' %}" rel="stylesheet">
+    <link href="{% static 'homepage/styles/main.css' %}" rel="stylesheet">
 
     <!-- Calendar CSS -->
     <link href="{% static 'homepage/github-calendar.css' %}" rel="stylesheet">
