--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -199,6 +199,7 @@
                 <div class="col-xs-12 col-lg-12">
                 <div class="text-center">
                   <h2>My GitHub Contributions</h2>
+                  <hr class="small">
                   <p class="lead">I write code every day, both for myself and for open-source projects.</p>
                 </div>
 
@@ -213,6 +214,26 @@
             </div>
         </div>
     </aside>
+
+    <section class="bio">
+      <div class="container">
+        <div class="row">
+          <h2 class="text-center">About Me</h2>
+          <hr class="small">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="col-sm-12 col-md-8 col-lg-8">
+                <p class="bio-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
+              <div class="col-sm-4 col-sm-offset-4 col-md-offset-0">
+                <img class="img-responsive img-circle center-block" src="{% static 'homepage/images/or_city_cropped.jpg' %}" alt="Evan Palmer's headshot" />
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer id="contact">
