--- a/portfolio/homepage/static/homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css
+++ b/portfolio/homepage/static/homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css
@@ -168,7 +168,7 @@ hr.small {
   font-size: 2em;
 }
 
-/* Services */
+/* Skills */
 
 .skills {
     border-top: 1em solid white;
@@ -177,20 +177,6 @@ hr.small {
 
 .skill-item {
     margin-bottom: 30px;
-}
-
-/* Callout */
-
-.callout {
-    display: table;
-    width: 100%;
-    height: 400px;
-    color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
 }
 
 /* Portfolio */
