add views, urls, templates, and static for projects app

--- a/portfolio/projects/templates/projects/base-projects.html
+++ b/portfolio/projects/templates/projects/base-projects.html
@@ -1,8 +1,8 @@
 {% extends "homepage/base.html" %}
 {% load staticfiles %}
 {% block title %}
-{{ block.super }} - Project: {{ project_name }}
+{{ block.super }} - Projects
 {% endblock title %}
 {% block content %}
-This is the detail page for {{ project_name }}.
+<h1>This is the base-projects template</h1>
 {% endblock content %}
