--- a/portfolio/projects/templates/projects/project-list.html
+++ b/portfolio/projects/templates/projects/project-list.html
@@ -16,4 +16,5 @@
     </li>
   {% endfor %}
 </ul>
+<a class="btn btn-info text-center" href={% url 'homepage_index' %}>Back Home</a>
 {% endblock content %}
