add custom_stylesheets block, update projects templates
update base templates, project-detail, project-list,
and projects-for-tag

--- a/portfolio/projects/templates/projects/base-projects.html
+++ b/portfolio/projects/templates/projects/base-projects.html
@@ -3,6 +3,9 @@
 {% block title %}
 {{ block.super }} - Projects
 {% endblock title %}
+{% block custom_stylesheets %}
+<link rel="stylesheet" href="{% static 'projects/styles/projects.css' %}" media="screen" charset="utf-8">
+{% endblock custom_stylesheets %}
 {% block content %}
 <h1>This is the base-projects template</h1>
 {% endblock content %}
