--- a/portfolio/homepage/templates/homepage/base.html
+++ b/portfolio/homepage/templates/homepage/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Evan Palmer's Website and Web Development Portfolio">
     <meta name="author" content="Evan Palmer">
 
     <title>
@@ -16,13 +16,14 @@
     </title>
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'homepage/sb-portfolio-1.0.4/css/bootstrap.min.css' %}" rel="stylesheet">
-
+    {% block custom_stylesheets %}
     <!-- Custom CSS -->
     <link href="{% static 'homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css' %}" rel="stylesheet">
     <link href="{% static 'homepage/styles/main.css' %}" rel="stylesheet">
 
     <!-- Calendar CSS -->
     <link href="{% static 'homepage/styles/github-calendar.css' %}" rel="stylesheet">
+    {% endblock custom_stylesheets %}
 
     <!-- Custom Fonts -->
     <link href="{% static 'homepage/sb-portfolio-1.0.4/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
