reorganize project-detail markup, adjust some styles

--- a/portfolio/projects/static/projects/styles/projects.scss
+++ b/portfolio/projects/static/projects/styles/projects.scss
@@ -10,6 +10,13 @@ body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.tag-list {
+  margin-top: 1.5em;
+}
+.description {
+  font-size: 2rem;
+}
+
 ul.list-inline {
   display: inline;
   li {
