remove grid markup from base-project block content
also tweak title in project-list to match others

--- a/portfolio/projects/templates/projects/base-projects.html
+++ b/portfolio/projects/templates/projects/base-projects.html
@@ -7,16 +7,11 @@
 <link rel="stylesheet" href="{% static 'projects/styles/projects.css' %}" media="screen" charset="utf-8">
 {% endblock custom_stylesheets %}
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-lg-10 col-lg-offset-1">
-      <h2 class="text-center">Projects</h2>
-      <main>
-      {% block main %}
-      <h2>This is the base-projects template</h2>
-      {% endblock main %}
-      </main>
-    </div>
-  </div>
-</div>
+<main>
+  <h2 class="text-center">Projects</h2>
+  <hr class="small">
+  {% block main %}
+  <h2>This is the base-projects template</h2>
+  {% endblock main %}
+</main>
 {% endblock content %}
