--- a/portfolio/projects/templates/projects/project-list.html
+++ b/portfolio/projects/templates/projects/project-list.html
@@ -1,7 +1,7 @@
 {% extends "projects/base-projects.html" %}
 {% load staticfiles %}
 {% block title %}
-{{ block.super }} ~ Projects
+{{ block.super }}
 {% endblock title %}
 {% block custom_stylesheets %}
 <link rel="stylesheet" href="{% static 'projects/styles/projects.css' %}" media="screen" charset="utf-8">
